# snektest

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  TODO.md  justfile  lol.py  pyproject.toml  sitecustomize.py  test_test.py  try_rich.py
old/: __main__.py  results.py  runner.py
old_tests/unit/: test.py
snektest/: __init__.py  __init__.pyi  agent_docs.py  annotations.py  assertions.py  cli.py  collection.py  decorators.py  execution.py  fixtures.py  models.py  output.py  presentation.py  presenter.py  reporting.py  results.py  runner.py  runner.pyi  testing.py  utils.py
snektest/examples/: __init__.py  async_tests.py  basic_test.py  fixtures.py  parametrize.py
snektest/presenter/: __init__.py  diff.py  errors.py  summary.py  traceback.py
tests/: fixtures.py  testutils.py
tests/feature/: test_assertion_formatting.py  test_assertions.py  test_presenter.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_assertions.py  test_async.py  test_basic.py  test_breakpoint_support.py  test_fixture_error.py  test_fixtures.py  test_params.py  test_pdb_flag.py  test_snektest.py  test_sync.py
tests/isolated/: test_annotations.py  test_basic.py  test_cli.py  test_cli_properties.py  test_collection.py  test_doc_directives.py  test_execution.py  test_fixture_teardown_properties.py  test_fixtures.py  test_hypothesis.py  test_markers.py  test_models.py  test_output.py
tests/meta/: test_async_fixtures.py  test_basic_execution.py  test_doc_blocks.py  (+7 more)
testutils/: doc_verify.py  docblocks.py  fixtures.py  helpers.py  render_matrix.py
(+10 files in other folders)
